--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Cat!
+title: 流浪的猫
 subtitle: ''
 description: '流浪不同次元的猫'
 keywords: 嵌入式 物联网 前端 后端
