--- a/_config.yml
+++ b/_config.yml
@@ -110,5 +110,5 @@ aplayer:
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@112.74.54.201:/home/git/repos/blog.git
+  repo: git@112.74.54.201:/var/repo/hexo.git
   branch: master
